# itmo

./: .gitignore
ai-system/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
ai-system/lab1/: base-knowledge.pl  test.pl
ai-system/lab3/: __init__.py  base-knowledge.pl
ai-system/lab4/: lab4.ipynb
ai-system/lab5/.ipynb_checkpoints/: lab5-checkpoint.ipynb
ai-system/lab6/.ipynb_checkpoints/: lab6-checkpoint.ipynb
ai-system/lab7/.ipynb_checkpoints/: lab7-checkpoint.ipynb
if-database/: docker-compose.yml
if-database/coursework/: coursework.drawio
if-database/lab1/: ddl.sql  dml.sql  if_db_lab1.drawio.xml
if-database/lab3/: query.sql  task_1.sql  task_2.sql  task_3.sql  task_4.sql  task_5.sql  task_6.sql  task_7.sql
if-database/lab4/: Lab_4.html  task_1.sql  task_2.sql
low-level-programming/: .gitignore
low-level-programming/lab1/: CMakeLists.txt  README.md  analysis.py
low-level-programming/lab1-v2/include/: column.h  data.h  db.h  operations.h  row.h  table.h
low-level-programming/lab1-v2/src/: column.c  data.c  db.c  operations.c  row.c  table.c
low-level-programming/lab1-v2/tests/: test_operations.c
low-level-programming/lab1-v3/: CMakeLists.txt
low-level-programming/lab1/analysis/: plot_performance.py
low-level-programming/lab1/dbms/: CMakeLists.txt  main.cpp
low-level-programming/lab1/dbms/include/: data_types.h  database.h
low-level-programming/lab1/dbms/src/: database.cpp
low-level-programming/lab1/include/: data_types.h  db.h  operations.h  table.h  types.h  utilities.h
low-level-programming/lab1/src/: db.c  operations.c  types.c  utilities.c
low-level-programming/lab1/tests/: CMakeLists.txt  test_db.c  test_operations.c  test_operations_performance.c
low-level-programming/lab2/: .gitignore  Makefile  README.md  ast.h  bnf.md  lexer.h  lexer.l  parser.y  sql.l  sql.y  y.output
low-level-programming/lab2/src/: main.c  (+1 more)
low-level-programming/lab3/: .gitignore  Makefile  README.md  client.c  database.proto  db.db  request_handler.c  request_handler.h  server.c
operating-system/track3/: multi-processor-scheduling.py  page-replacement.py  process-scheduling.py
(+23 files in other folders)
